# forge-hack

./: .env.example  .gitignore  README.md  Text File.txt  render.yaml
backend/: requirements.txt
backend/app/: main.py
backend/app/agents/: primary_agent.py  watchdog.py
backend/app/api/: agents.py  branches.py  cli.py  commits.py  metrics.py  scan.py  settings.py
backend/app/core/: auth.py  compress.py  hashing.py  verify.py
backend/app/db/: client.py  models.py
backend/tests/: test_agents.py  test_core.py
cli/: main.py  mock_payload.json  pyproject.toml  test.json
cli/src/chatbot/: chatbot.py
cli/src/cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cli/src/utils/: memory.py  nodes.py
frontend/: _metadata.json  index.html  package-lock.json  package.json  theme_migrator.js
frontend/src/: App.jsx  index.jsx
frontend/src/assets/: index.css
frontend/src/components/: MemoryTree.jsx  Navbar.jsx  ThoughtInspector.jsx  WatchdogAlerts.jsx
frontend/src/context/: AgentContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Agents.jsx  Analytics.jsx  CLI.jsx  Dashboard.jsx  LandingPage.jsx  Login.jsx  NewRepo.jsx  Notifications.jsx  RepoDashboard.jsx  Settings.jsx  Signup.jsx  Watchdog.jsx  WatchdogSettings.jsx
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_watchdog_logs.sql
