[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.0",
    "langchain-ollama>=0.0.0",
    "questionary>=2.1.1",
    "requests>=2.34.2",
    "rich>=15.0.0",
]
